# DBC-CloudCyberCafe

./: .editorconfig  .gitignore  README.md
ipxe/: README.md  boot.ipxe  boot.ipxe.cfg  menu.ipxe  script.ipxe
ipxe/cfg/: 404.html
plotly/: README.md  dhcp.py  error_code.py  global_config.py  home.py  ipxe.py  iscsi.py  lvm2.py  occ.py  rpc_handler.py  smyoo.py  test_client.py  util.py  version.py
preset/: CMakeLists.txt  README.md  config.h  cross_func_posix.cpp  cross_func_win32.cpp  cross_platform_func.h  cross_util.cpp  cross_util.h  error_code.h  main.cpp  preset.thrift  preset_handler.cpp  preset_handler.h  test_client.cpp  test_client.py
test/smyoo/: api.http  test.py
ubuntu/: preseed.cfg
